--- a/Class-1/index.html
+++ b/Class-1/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<button onclick="printVariable('Sarah');">Click Me Sarah</button>
+<button onclick="printVariable('abc');">Click Me Sarah</button>
 <button onclick="printVariable('saman');">Click Me Saman</button>
 <button onclick="printVariable('zara');">Click Me Zara</button>
 
